<resources>
    <string name="app_name">Posyandu</string>
    <string name="_0">0</string>
    <string name="_bayi">- Bayi</string>
    <string name="_ibu">- Ibu</string>
    <string name="_ibu_hamil">- Ibu Hamil</string>
    <string name="_lansia">- Lansia</string>
    <string name="_selesai">Selesai</string>
    <string name="administrasi">Administrasi</string>
    <string name="akan_datang">akan datang</string>
    <string name="akun">Akun</string>
    <string name="akun_pengguna">Akun Pengguna</string>
    <string name="alamat">Alamat</string>
    <string name="anda_sudah_terdaftar">Anda Sudah Terdaftar</string>
    <string name="antrian">Antrian</string>
    <string name="batal">Batal</string>
    <string name="bayi">Bayi</string>
    <string name="bayi_balita">Bayi/Balita</string>
    <string name="bayi_crossed">Bayi</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="belum_terdaftar">Belum Terdaftar</string>
    <string name="berat">Berat</string>
    <string name="berlangsung">berlangsung</string>
    <string name="bidan">Bidan</string>
    <string name="cari">Cari</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="daftar_pengguna">Daftar Pengguna</string>
    <string name="daftar_proses">Daftar Proses</string>
    <string name="data_bayi">Data Bayi</string>
    <string name="data_bayi_balita">Data Bayi/Balita</string>
    <string name="data_bidan">Data Bidan</string>
    <string name="data_ibu">Data Ibu</string>
    <string name="data_ibu_hamil">Data Ibu Hamil</string>
    <string name="data_imunisasi">Data Imunisasi</string>
    <string name="data_lansia">Data Lansia</string>
    <string name="data_obat">Data Obat</string>
    <string name="data_pengguna">Data Pengguna</string>
    <string name="data_periksa">Data Periksa</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="detail_data_bayi">Detail Data Bayi</string>
    <string name="detail_data_bidan">Detail Data Bidan</string>
    <string name="detail_data_ibu">Detail Data Ibu</string>
    <string name="detail_data_ibu_hamil">Detail Data Ibu Hamil</string>
    <string name="detail_data_imunisasi">Detail Data Imunisasi</string>
    <string name="detail_data_keuangan">Detail Data Keuangan</string>
    <string name="detail_data_lansia">Detail Data Lansia</string>
    <string name="detail_data_obat">Detail Data Obat</string>
    <string name="detail_data_periksa">Detail Data Periksa</string>
    <string name="dipilih">Dipilih</string>
    <string name="edit">Edit</string>
    <string name="edit_jadwal">Edit Jadwal</string>
    <string name="fab">fab</string>
    <string name="ganti">Ganti</string>
    <string name="ganti_akun">Ganti Akun</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="gunakan_alat">Gunakan Alat</string>
    <string name="hapus">Hapus</string>
    <string name="hapus_data">Hapus Data</string>
    <string name="harga">Harga</string>
    <string name="harga_imunisasi">Harga Imunisasi</string>
    <string name="harga_pemeriksaan">Harga Pemeriksaan</string>
    <string name="home">Home</string>
    <string name="ibu">Ibu</string>
    <string name="ibu_crossed">Ibu</string>
    <string name="ibu_hamil">Ibu Hamil</string>
    <string name="ibu_hamil_crossed">Ibu Hamil</string>
    <string name="icon">Icon</string>
    <string name="id">ID</string>
    <string name="id_pendaftaran">ID Pendaftaran:</string>
    <string name="image">Image</string>
    <string name="imunisasi">Imunisasi</string>
    <string name="imunisasi_bayi_balita">Imunisasi Bayi/Balita</string>
    <string name="imunisasi_ibu_hamil">Imunisasi Ibu Hamil</string>
    <string name="imunisasi_untuk">Imunisasi untuk</string>
    <string name="input_data">Input Data</string>
    <string name="item">Item</string>
    <string name="jadwal">Jadwal</string>
    <string name="jadwal_posyandu">Jadwal Posyandu</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="jumlah">Jumlah:</string>
    <string name="jumlah_obat">Jumlah Obat</string>
    <string name="kami">kami</string>
    <string name="kebijakan_privasi">kebijakan privasi</string>
    <string name="kebijakan_privasi_jdl">Kebijakan Privasi</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="keluar">Keluar</string>
    <string name="keterangan">Keterangan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="lansia">Lansia</string>
    <string name="lansia_crossed">Lansia</string>
    <string name="layanan">Layanan</string>
    <string name="layanan_yang_dipilih">Layanan yang dipilih:</string>
    <string name="list_data_bayi">List Data Bayi</string>
    <string name="list_data_ibu">List Data Ibu</string>
    <string name="list_data_ibu_hamil">List Data Ibu Hamil</string>
    <string name="list_data_lansia">List Data Lansia</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="logout">Logout</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="masukkan_deskripsi">Masukkan Deskripsi</string>
    <string name="masukkan_harga_wajib_di_isi">Masukkan Harga (wajib di isi)</string>
    <string name="masukkan_jumlah_obat">Masukkan Jumlah Obat</string>
    <string name="masukkan_jumlah_stok">Masukkan Jumlah Stok</string>
    <string name="masukkan_kembali_password_baru">Masukkan Kembali Password Baru</string>
    <string name="masukkan_keterangan">Masukkan Keterangan</string>
    <string name="masukkan_keterangan_opsional">Masukkan Keterangan (opsional)</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_nama_ayah_wajib_di_isi">Masukkan Nama Ayah (wajib di isi)</string>
    <string name="masukkan_nama_bayi">Masukkan Nama Bayi</string>
    <string name="masukkan_nama_bayi_wajib_di_isi">Masukkan Nama Bayi (wajib di isi)</string>
    <string name="masukkan_nama_ibu_wajib_di_isi">Masukkan Nama Ibu (wajib di isi)</string>
    <string name="masukkan_nama_obat_wajib_di_isi">Masukkan Nama Obat (wajib di isi)</string>
    <string name="masukkan_nama_suami_wajib_di_isi">Masukkan Nama Suami (wajib di isi)</string>
    <string name="masukkan_nama_wajib_di_isi">Masukkan Nama (wajib di isi)</string>
    <string name="masukkan_nik_bayi_jika_ada">Masukkan NIK Bayi (jika ada)</string>
    <string name="masukkan_nik_ibu_opsional">Masukkan NIK Ibu (opsional)</string>
    <string name="masukkan_nik_opsional">Masukkan NIK (opsional)</string>
    <string name="masukkan_no_bpjs_ibu_jika_ada">Masukkan No. BPJS Ibu (jika ada)</string>
    <string name="masukkan_no_bpjs_jika_ada">Masukkan No. BPJS (jika ada)</string>
    <string name="masukkan_no_kk_ibu_opsional">Masukkan No. KK Ibu (opsional)</string>
    <string name="masukkan_no_kk_opsional">Masukkan No. KK (opsional)</string>
    <string name="masukkan_no_wa">Masukkan No WA</string>
    <string name="masukkan_nominal">Masukkan Nominal</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_password_baru">Masukkan Password Baru</string>
    <string name="masukkan_password_saat_ini">Masukkan Password Saat Ini</string>
    <string name="masukkan_qty_obat">Masukkan Qty Obat</string>
    <string name="masukkan_satuan_wajib_di_isi">Masukkan Satuan (wajib di isi)</string>
    <string name="masukkan_tanggal_wajib_di_isi">Masukkan Tanggal (wajib di isi)</string>
    <string name="masukkan_tgl_kehamilan">Masukkan Tgl Kehamilan</string>
    <string name="masukkan_tgl_kehamilan_wajib_di_isi">Masukkan Tgl Kehamilan (wajib di isi)</string>
    <string name="masukkan_tgl_lahir_bayi_wajib_di_isi">Masukkan Tgl Lahir Bayi (wajib di isi)</string>
    <string name="masukkan_tinggi_badan">Masukkan Tinggi Badan</string>
    <string name="masukkan_umur_wajib_di_isi">Masukkan Umur (wajib di isi)</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="nama">Nama</string>
    <string name="nama_ayah">Nama Ayah</string>
    <string name="nama_bayi">Nama Bayi</string>
    <string name="nama_bidan">Nama Bidan</string>
    <string name="nama_ibu">Nama Ibu</string>
    <string name="nama_imunisasi">Nama Imunisasi</string>
    <string name="nama_lansia">Nama Lansia</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="nama_pemeriksaan">Nama Pemeriksaan</string>
    <string name="nama_suami">Nama Suami</string>
    <string name="nik">NIK</string>
    <string name="no_antri">No. Antri</string>
    <string name="no_bpjs">No. BPJS</string>
    <string name="no_kk">No. KK</string>
    <string name="no_wa">No. WA</string>
    <string name="nol">0</string>
    <string name="nominal">Nominal</string>
    <string name="nomor_antrian">Nomor Antrian</string>
    <string name="obat">Obat</string>
    <string name="obat_bayi_balita">Obat Bayi/Balita</string>
    <string name="obat_lansia">Obat Lansia</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pemeriksaan">Pemeriksaan</string>
    <string name="pemroses">Pemroses</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="pendaftaran_tanggal">Pendaftaran Tanggal</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="penyuluhan">Penyuluhan</string>
    <string name="perempuan">Perempuan</string>
    <string name="periksa">Periksa</string>
    <string name="photo">Photo</string>
    <string name="pilih">Pilih</string>
    <string name="pilih_bidan">Pilih Bidan</string>
    <string name="pilih_data_bayi">Pilih Data Bayi</string>
    <string name="pilih_data_lansia">Pilih Data Lansia</string>
    <string name="pilih_imunisasi">Pilih Imunisasi</string>
    <string name="pilih_imunisasi_untuk">Pilih Imunisasi untuk</string>
    <string name="pilih_layanan">Pilih Layanan</string>
    <string name="pilih_obat">Pilih Obat</string>
    <string name="pilih_periksa">Pilih Periksa</string>
    <string name="pilih_riwayat">Pilih Riwayat</string>
    <string name="pilihan">Pilihan</string>
    <string name="pos_pelayanan">Pos Pelayanan</string>
    <string name="proses">Proses</string>
    <string name="proses_input">Proses Input</string>
    <string name="qty">Qty</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="rincian">Rincian</string>
    <string name="rincian_keuangan">Rincian Keuangan</string>
    <string name="riwayat">Riwayat</string>
    <string name="riwayat_kunjungan">Riwayat Kunjungan</string>
    <string name="satuan">Satuan</string>
    <string name="saya_menyatakan_telah_membaca_dan_setuju_atas_kebijakan_tersebut">Saya menyatakan telah membaca dan setuju atas kebijakan tersebut</string>
    <string name="sdidtk">SDIDTK</string>
    <string name="search_menu_title">Search</string>
    <string name="searchbar_scrolling_view_behavior">com.google.android.material.search.SearchBar$ScrollingViewBehavior</string>
    <string name="searchview_clear_text_content_description">Clear text</string>
    <string name="searchview_navigation_content_description">Back</string>
    <string name="selesai">selesai</string>
    <string name="side_sheet_accessibility_pane_title">Side Sheet</string>
    <string name="side_sheet_behavior">com.google.android.material.sidesheet.SideSheetBehavior</string>
    <string name="silahkan_membaca">Silahkan membaca</string>
    <string name="silahkan_periksa_di_halaman_jadwal">Silahkan Periksa di Halaman Jadwal</string>
    <string name="silahkan_pilih">Silahkan Pilih</string>
    <string name="status">Status</string>
    <string name="tanggal">Tanggal</string>
    <string name="tulip_ix_tiban_ayu">Tulip IX Tiban Ayu</string>
    <string name="ubah">Ubah</string>
</resources>