<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.EditScheduleActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/jadwal_edit_toolbar"
        android:background="@drawable/bg_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_jadwal_edit_toolbar_back"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:contentDescription="@string/photo"
                android:paddingEnd="24dp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:textSize="18sp"
                android:textColor="@color/black_solid"
                android:id="@+id/tv_jadwal_edit_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_jadwal"
                android:layout_centerInParent="true"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                tools:ignore="RelativeOverlap,VisualLintSystemUi" />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_posyandu"
                android:contentDescription="@string/logo"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jadwal_edit_toolbar">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll_jadwal_edit_01"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:padding="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_calendar_24"
                    android:contentDescription="@string/icon"/>
                <TextView
                    android:textSize="16sp"
                    android:id="@+id/tv_jadwal_edit_tgl"
                    android:background="@drawable/border"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_tanggal_wajib_di_isi"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/masukkan_keterangan_opsional"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_comment_white_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_jadwal_edit_ket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="4"
                    android:textColorHint="#757575"
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/border"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"/>
                <RadioGroup
                    android:id="@+id/rg_jadwal_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp">
                    <RadioButton
                        android:id="@+id/rb_jadwal_edit_0"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/akan_datang"
                        android:paddingEnd="10dp"/>
                    <RadioButton
                        android:id="@+id/rb_jadwal_edit_1"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/berlangsung"
                        android:paddingEnd="10dp"/>
                    <RadioButton
                        android:id="@+id/rb_jadwal_edit_2"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/selesai"
                        android:paddingEnd="10dp"/>
                </RadioGroup>
            </LinearLayout>
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_jadwal_edit_hapus"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/background_button"
                    android:drawableStart="@drawable/ic_baseline_delete_white_24"
                    android:paddingStart="35dp"
                    android:paddingEnd="40dp"
                    android:text="@string/hapus"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_jadwal_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/background_button"
                    android:drawableStart="@drawable/ic_baseline_edit_white_24"
                    android:paddingStart="35dp"
                    android:paddingEnd="40dp"
                    android:text="@string/ubah"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    tools:ignore="RelativeOverlap,TextContrastCheck" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>