<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryPubActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/riwayat_pub_toolbar"
        android:background="@drawable/bg_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp">
            <ImageView
                android:id="@+id/iv_riwayat_pub_toolbar_back"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:contentDescription="@string/photo"
                android:paddingEnd="24dp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:textSize="18sp"
                android:textColor="@color/black_solid"
                android:id="@+id/tv_riwayat_pub_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riwayat"
                android:layout_centerInParent="true"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                tools:ignore="RelativeOverlap,VisualLintSystemUi" />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_posyandu"
                android:contentDescription="@string/logo"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/riwayat_pub_toolbar">
        <TextView
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/riwayat_kunjungan"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:stretchColumns="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="5dp">
            <TableRow android:background="#51b435"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tanggal"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/pilihan"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/status"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />
            </TableRow>
        </TableLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_riwayat_pub"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>