<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.counseling.CounselingOrgActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/penyuluhan_org_toolbar"
        android:background="@drawable/bg_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp">
            <ImageView
                android:id="@+id/iv_penyuluhan_org_toolbar_back"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:contentDescription="@string/photo"
                android:paddingEnd="24dp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:textSize="18sp"
                android:textColor="@color/black_solid"
                android:id="@+id/tv_penyuluhan_org_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penyuluhan"
                android:layout_centerInParent="true"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                tools:ignore="RelativeOverlap,VisualLintSystemUi" />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_posyandu"
                android:contentDescription="@string/logo"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:orientation="vertical"
        android:id="@+id/penyuluhan_org_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/penyuluhan_org_toolbar">
        <RelativeLayout
            android:id="@+id/rl_org_penyuluhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_ada_data"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>